rendered nav bar in header to ensure elements are inline

--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -23,3 +23,9 @@
   .custom-header {
     background-color: #00000006;
   }
+
+  .header-content {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+  }
