added styling to toggle

--- a/client/src/components/Toggle/index.css
+++ b/client/src/components/Toggle/index.css
@@ -27,6 +27,10 @@
     border: 1px solid transparent ;
     transition: background-color 0.3s, border-color 0.3s;
     box-shadow: none;
+    padding: 0.75rem 1.5rem; /* controls height & width */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   }
   
   /* Hover ONLY when NOT selected */
