added hover affect on cards

--- a/client/src/components/MediaCard/index.css
+++ b/client/src/components/MediaCard/index.css
@@ -4,3 +4,18 @@
     
     /* text-shadow: 0 0 10px #ffc107; */
 }
+
+.card{
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+  
+  .card:hover {
+    transform: scale(1.05); /* Slight zoom */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); /* Elevation effect */
+    z-index: 2; /* Make sure it sits above others */
+    cursor: pointer;
+  }
+
+  .card-body{
+    background-color: rgb(210, 209, 209);
+  }
