--- a/client/src/components/MediaModal/index.css
+++ b/client/src/components/MediaModal/index.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.custom-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -12,7 +12,7 @@
     backdrop-filter: blur(4px);
   }
   
-  .modal-content {
+  .custom-modal-content {
     background-color: #fff;
     border-radius: 1rem;
     padding: 2rem;
