got home page video to play full screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,15 @@
 body, h1, h2, h3, h4, h5, h6, p, a, span, div {
     text-shadow: none;
   }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html, body {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+  }
