--- a/client/src/pages/css/Home.css
+++ b/client/src/pages/css/Home.css
@@ -45,15 +45,11 @@
   
   /* Floating card */
   .floating-card-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    z-index: 2;
-    width: 90%;
-    max-width: 600px;
-    max-height: 80vh;
-    margin-bottom: 0 !important;
+    width: 100%;
+    max-width: 100%;
+    padding: 2rem 1rem;
+    display: flex;
+    justify-content: center;
   }
 
   /* Getting started section */
@@ -100,6 +96,11 @@
     flex-direction: column;
     align-items: center;
   }
+
+ .how-it-works-container{
+    background-color: purple;
+    width: auto;
+ }
   
   /* Section below the video */
   .info-section {
@@ -109,6 +110,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    width: 100%;
   }
   
   /* Normal info cards */
