updated friend button and modal along with search button in modal

--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -1,9 +1,10 @@
-.auth-buttons {
+.authentication-logout-button {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 1.5rem;
   }
+
   /* Applies only to Login and Signup links */
 .auth-link {
     text-decoration: none;
@@ -30,3 +31,5 @@
     align-items: center;
     gap: 1.5rem;
   }
+
+  
