--- a/client/src/pages/css/Login.css
+++ b/client/src/pages/css/Login.css
@@ -1,6 +1,6 @@
 /* Page layout */
 main {
-    /* background-color: #f5f5f5; */
+    /* background-color: #a3a3a3; */
     min-height: 60vh;
     padding-top: 5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -8,7 +8,25 @@ main {
     justify-content: center;
     
   }
-  
+
+
+  /* LOGIN AND SIGNUP BACKGROUND */
+  .custom-bg-container {
+  min-height: 100vh;  /* make sure it fills the full screen height */
+  background-color: #909090;  /* change this to any color you like */
+  /* background-image: url('../../assets/confetti.png'); */
+  background-size: 400px 400px;;       
+  background-position: center; 
+  background-repeat: repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  border-radius: 98px;
+}
+
+
+
   /* Card container */
   .card {
     background-color: #ffffff;
