--- a/client/src/components/Friends/FriendsModal.css
+++ b/client/src/components/Friends/FriendsModal.css
@@ -1,19 +1,21 @@
+
 .friends-modal {
-    padding: 20px;
+    padding: 40px;
     background-color: rgb(211, 210, 210);
     border-radius: 45px;
     display: flex; /* Use flexbox */
     flex-direction: column; /* Stack items vertically */
 }
 
-
-.friends-modal {
+.friends-list {
+    max-height: 400px;
+    overflow-y: auto;
+    width: 100%;
+    margin-top: 10px; /* optional for spacing */
+    background-color: #e3e3e3;
     padding: 20px;
-    background-color: rgb(211, 210, 210);
-    border-radius: 45px;
-    display: flex; /* Use flexbox */
-    flex-direction: column; /* Stack items vertically */
-}
+    border-radius: 20px;
+  }
 
 .friends-header {
     display: flex; /* Use flexbox for header */
@@ -57,22 +59,44 @@
     cursor: pointer;
   }
   
-  .btn-search {
-    background-color: transparent;
-  }
   
   .btn-toggle {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     width: 150px;
-    background-color: #20b2aa;
+    background-color: #45869F;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    padding: 8px 12px;
+    box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+    transition: background-color 0.3s, box-shadow 0.3s;
   }
   
-  .btn-friend {
-    background-color: teal;
+  .btn-toggle.active {
+    background-color: #178f8a;
+    box-shadow: none;
+    border-bottom: 2px solid white; /* creates the tab connection look */
   }
   
-  .btn-unfriend {
-    background-color: red;
+  .btn.btn-friend {
+    background-color: #3c4c63;
+    /* background-color: #45869F; */
+    color: white;
+  }
+  
+  .btn.btn-unfriend {
+    background-color: #D9484F;
+    color: white;
+  }
+
+  .btn.btn-friend:hover{
+    background-color: #45869F;
+    /* background-color: #3c4c63; */
+  }
+  
+  .btn.btn-unfriend:hover{
+    background-color: #b9383f;
   }
   
   .friend-card {
