--- a/client/src/components/AddReactionForm/index.css
+++ b/client/src/components/AddReactionForm/index.css
@@ -5,21 +5,21 @@
   }
   
   .add-reaction-button {
-    background-color: #2563eb;
+    background-color: #d67277;
     border: none;
-    border-radius: 50%;
-    padding: 12px;
+    border-radius: 10px;
+    padding: 10px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
   }
   
   .add-reaction-button:hover {
-    background-color: #1d4ed8;
+    background-color: #D9484F;
   }
   
   .reaction-form {
-    background-color: #fff;
+    background-color: rgb(211, 210, 210);
     border-radius: 12px;
     padding: 1.5rem;
     width: 100%;
@@ -100,10 +100,10 @@
   }
   
   .submit-button {
-    background-color: #2563eb;
+    background-color: #d67277;
     color: white;
   }
   
   .submit-button:hover {
-    background-color: #1d4ed8;
+    background-color: #D9484F;
   }
