--- a/client/src/components/HomeVideoBG/index.css
+++ b/client/src/components/HomeVideoBG/index.css
@@ -30,3 +30,14 @@
   border: none;
   pointer-events: none;
 }
+
+.video-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1f2937; /* dark gray background */
+  z-index: -1; /* sits behind the video iframe */
+}
