--- a/client/src/components/Nav/index.css
+++ b/client/src/components/Nav/index.css
@@ -65,8 +65,32 @@
 }
 
 .active-nav-link {
-  color: #ffc107;
+  color: #ffc107 !important; /* Ensure that the active color is applied */
   font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.active-nav-link::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ffc107;
+  opacity: 1; /* Make sure the line is visible */
+  transition: opacity 0.3s ease;
+}
+
+.custom-nav-link:hover {
+  color: #ffc107; /* This is for hover effect on all links */
+}
+
+.custom-nav-link.active-nav-link:hover::after {
+  opacity: 1; /* Ensure the underline shows up on hover as well */
 }
 
 @media (max-width: 992px) {
