got modal showing up on search and carousel

--- a/client/src/pages/css/Home.css
+++ b/client/src/pages/css/Home.css
@@ -158,6 +158,10 @@
     z-index: 9999999;
   }
 
+  .wlcm-bck-txt{
+    font-size: 1.8rem;
+  }
+
 
   /* fade in up on info cards */
   @keyframes fadeInUp {
