--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -4,7 +4,9 @@
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     color: #bebebe;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+    margin-top: auto
   }
+
   
   .footer-text {
     font-size: 0.9rem;
