--- a/client/src/components/HomeVideoBG/index.css
+++ b/client/src/components/HomeVideoBG/index.css
@@ -5,7 +5,8 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
+  pointer-events: none;
 }
 
 .video-iframe-wrapper {
@@ -16,6 +17,7 @@
   height: 100%;
   pointer-events: none;
   overflow: hidden;
+  background-color: #111827;
 }
 
 .video-iframe-wrapper iframe {
@@ -39,6 +41,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #1f2937;
-  z-index: -2;
+  /* background-color: #1f2937; */
+  z-index: -1;
 }
