--- a/client/src/components/HomeVideoBG/index.css
+++ b/client/src/components/HomeVideoBG/index.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
 }
 
@@ -31,7 +31,7 @@
   min-width: 177.78vh; /* 16:9 ratio based on height */
   transform: translate(-50%, -50%);
   border: none;
-  pointer-events: none;
+  pointer-events: none !important;
 }
 
 .video-background::before {
