working reaction message that a reaction was added and fades away in 2 sec

--- a/client/src/components/AddReactionForm/index.css
+++ b/client/src/components/AddReactionForm/index.css
@@ -111,3 +111,14 @@
   .emoji-button{
     cursor: pointer
   }
+
+  
+  .message {
+    background-color: lightgray;
+    color: #218eaf;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    text-align: center;
+  }
