--- a/client/src/pages/css/Home.css
+++ b/client/src/pages/css/Home.css
@@ -85,9 +85,10 @@
 }
 
 .glass-card {
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(255, 255, 255, 0.616);
   backdrop-filter: blur(10px);
-  padding: 2rem;
+  padding: 1.5rem;
+  border: 2px solid rgba(30, 30, 30, 0.952);
   border-radius: 20px;
   max-width: 400px;
   width: 90%;
