--- a/client/src/components/Invites/InviteOptions.css
+++ b/client/src/components/Invites/InviteOptions.css
@@ -22,6 +22,7 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    margin-left: 2rem;
   }
   
   .button-53:focus {
