--- a/client/src/components/ReactionList.tsx/index.css
+++ b/client/src/components/ReactionList.tsx/index.css
@@ -100,7 +100,7 @@
 
 .tab-button.active {
   color: #000;
-  border-bottom: 2px solid #007bff;
+  border-bottom: 2px solid #178f8a;
 }
 
 .tab-button:hover {
