--- a/client/src/pages/css/Reactions.css
+++ b/client/src/pages/css/Reactions.css
@@ -73,3 +73,8 @@
     border-top: 1px solid #eee;
     padding-top: 1rem;
   }
+
+  .reactions-header-txt{
+    display: flex;
+    justify-content: center;
+  }
