--- a/client/src/components/ReactionList.tsx/index.css
+++ b/client/src/components/ReactionList.tsx/index.css
@@ -73,7 +73,9 @@
 
 .user-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1rem;
+  padding: 10px;
 }
 
 .username {
